# Crypto

./: .gitignore  README.md  main.py  pyproject.toml
crypto/: __init__.py  crypto_app.py
crypto/app/: __init__.py
crypto/app/ai/: __init__.py  backtesting.py  indicators.py  performance_metrics.py  trading_environment.py  treaning.py
crypto/app/config/: __init__.py  config.py  logger.py
crypto/app/handlers/: __init__.py  ai_handler.py  bybit_handler.py  indicators.py  main_handler.py  parse.py  parser.py
crypto/app/models/: __init__.py  action.py  result.py  save.py
crypto/app/view/: settings.py
crypto/resources/: config.ini  index.tcss  model.h5  save.json  trading_operations.csv
test/ai_test/: model_tests.py  train_test.py
test/config_test/: config_test.py
test/parse_test/: bybit_test.py  main_handler_tests.py  save_test.py
