[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.2.2"
numpy = "^2.0.0"
icecream = "^2.1.3"
textual = "^0.72.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
bybit = "^0.2.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
